sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:3: error: ')' expected but ',' found.
  for(i <- 0 to (getValueCount() / 2), j <- (getValueCount() / 2) to getValueCount()-2) {
                                     ^AlgCocktailSort1:3: error: ';' expected but ')' found.
  for(i <- 0 to (getValueCount() / 2), j <- (getValueCount() / 2) to getValueCount()-2) {
                                                                                      ^